fixed welcome section content overflow error

--- a/css/primary.css
+++ b/css/primary.css
@@ -58,7 +58,7 @@
   background-color: #42a5f5;
   opacity: 0.8;
   border-radius: 0.7rem;
-  padding: 0.5rem;
+  padding: 0 0.5rem;
 }
 .sub-stage {
   font-weight: 600;
